[package]
authors = ["Brian Payne <bwpayne@gmail.com>"]
edition = "2021"
name = "dot-http"
version = "0.3.0"
readme = "README.md"
description = "dot-http is a text-based scriptable HTTP client. It is a simple language that resembles the actual HTTP protocol but with additional features to make it practical for someone who builds and tests APIs."
repository = "https://github.com/bayne/dot-http"
keywords = ["http", "scriptable", "javascript", "API"]
categories = ["command-line-utilities", "development-tools::testing", "web-programming::http-client"]
license = "Apache-2.0"

[[bin]]
name = "dot-http"
path = "src/main.rs"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "bayne/dot-http" }
appveyor = { repository = "bayne/dot-http", branch = "master", service = "github" }

[dependencies]

[dev-dependencies]
httpmock = "0.6.6"
tempfile = "3.1.0"

[features]
default = ["boa"]
boa = ["Boa"]
v8 = ["rusty_v8"]

